k8s/overleaf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overleaf
  namespace: kovacovsky-ns
  labels:
    app.kubernetes.io/name: overleaf
    app.kubernetes.io/part-of: overleaf
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: overleaf
